zh some data is missing

--- a/calculator_zh.html
+++ b/calculator_zh.html
@@ -27009,8 +27009,8 @@
                     8: '新叶猿',
                     9: '燎火鹿',
                     10: '企丸丸',
+                    11: '企丸王',
                     12: '雷棘鼠',
-                    '12b': '冰刺鼠',
                     13: '叶泥泥',
                     14: '玉藻狐',
                     15: '啼卡尔',
@@ -27023,7 +27023,6 @@
                     22: '遁地鼠',
                     23: '勾魂鱿',
                     24: '喵斯特',
-                    '24b': '冰丝特',
                     25: '鲁米儿',
                     26: '猎狼',
                     27: '炸蛋鸟',
@@ -27031,27 +27030,23 @@
                     29: '波霸牛',
                     30: '荆棘魔仙',
                     31: '鲨小子',
-                    '31b': '红小鲨',
                     32: '吊缚灵',
-                    '32b': '冰缚灵',
+                    33: '叶胖达',
                     34: '棉花糖',
                     35: '灌木羊',
                     36: '美露帕',
                     37: '紫霞鹿',
-                    '37b': '祇岳鹿',
+                    38: '疾风隼',
                     39: '姬小兔',
                     40: '炎魔羊',
-                    '40b': '暗魔羊',
                     41: '幻悦蝶',
                     42: '炽焰牛',
                     43: '趴趴鲶',
                     44: '黑鸦隐士',
                     45: '朋克蜥',
-                    '45b': '热血蜥',
                     46: '月镰魔',
                     47: '天擒鸟',
                     48: '羽箭射手',
-                    '48b': '山岳射手',
                     49: '铁拳猿',
                     50: '骑士蜂',
                     51: '女皇蜂',
@@ -27062,23 +27057,19 @@
                     56: '雷角马',
                     57: '吹雪狐',
                     58: '火麒麟',
-                    '58b': '邪麒麟',
                     59: '严冬鹿',
                     60: '霹雳犬',
                     61: '苍焰狼',
                     62: '雷鸣童子',
                     63: '秘斯媞雅',
                     64: '花冠龙',
-                    '64b': '雷冠龙',
                     65: '滑水蛇',
-                    '65b': '流沙蛇',
                     66: '噬魂兽',
                     67: '碎岩龟',
                     68: '猫蝠怪',
                     69: '博爱蜥',
                     70: '融焰娘',
                     71: '烽歌龙',
-                    '71b': '霜歌龙',
                     72: '浪刃武士',
                     73: '迅雷鸟',
                     74: '燧火鸟',
@@ -27088,26 +27079,17 @@
                     78: '薇莉塔',
                     79: '绸笠蛾',
                     80: '精灵龙',
-                    '80b': '精灵龙(水)',
                     81: '水灵儿',
-                    '81b': '火灵儿',
                     82: '碧海龙',
                     83: '冰棘兽',
                     84: '狱焰王',
-                    '84b': '狱阎王',
                     85: '佩克龙',
-                    '85b': '派克龙',
                     86: '连理龙',
-                    '86b': '海誓龙',
                     87: '花丽娜',
                     88: '熔岩兽',
-                    '88b': '寒霜兽',
                     89: '君王美露帕',
-                    '89b': '冰帝美露帕',
                     90: '森猛犸',
-                    '90b': '雪猛犸',
                     91: '白绒雪怪',
-                    '91b': '绿苔绒怪',
                     92: '铠格力斯',
                     93: '云海鹿',
                     94: '夜幕魔蝠',
@@ -27118,22 +27100,43 @@
                     99: '冥铠蝎',
                     100: '阿努比斯',
                     101: '覆海龙',
-                    '101b': '腾炎龙',
                     102: '朱雀',
-                    '102b': '清雀',
-                    103: '暴电熊',
+                    103: '暴电犬',
                     104: '百合女王',
-                    '104b': '黑月女王',
                     105: '荷鲁斯',
                     106: '波鲁杰克斯',
                     107: '异构格里芬',
                     108: '圣光骑士',
                     109: '混沌骑士',
                     110: '唤冬兽',
-                    '110b': '唤夜兽',
-                    111: '空涡龙'
+                    111: '空涡龙',
+                    '12b': '冰刺鼠',
+                    '24b': '冰丝特',
+                    '31b': '红小鲨',
+                    '32b': '冰缚灵',
+                    '33b': '雷胖达',
+                    '37b': '祇岳鹿',
+                    '40b': '暗魔羊',
+                    '45b': '热血蜥',
+                    '48b': '山岳射手',
+                    '58b': '邪麒麟',
+                    '64b': '雷冠龙',
+                    '65b': '流沙蛇',
+                    '71b': '霜歌龙',
+                    '80b': '精灵龙(水)',
+                    '81b': '火灵儿',
+                    '84b': '狱阎王',
+                    '85b': '派克龙',
+                    '86b': '海誓龙',
+                    '88b': '寒霜兽',
+                    '89b': '冰帝美露帕',
+                    '90b': '雪猛犸',
+                    '91b': '绿苔绒怪',
+                    '101b': '腾炎龙',
+                    '102b': '清雀',
+                    '104b': '黑月女王',
+                    '110b': '唤夜兽'
                 };
-
                 sonParentMap = {
                     1: {
                         1: '2',
@@ -34834,9 +34837,9 @@
                     paths.map(path => {
                         let str = '';
                         for (let i = 0; i < path.length - 1; i++) {
-                            str += `step${i + 1}: ${idPalMap[path[i]]} + ${idPalMap[sonParentMap[path[i + 1]][path[i]]]} = ${
-                                idPalMap[path[i + 1]]
-                            }。   `;
+                            let p1id = path[i];
+                            let p2id = sonParentMap[path[i + 1]][path[i]];
+                            str += `step${i + 1}: ${idPalMap[p1id]}(${p1id}) + ${idPalMap[p2id]}(${p2id}) = ${idPalMap[path[i + 1]]}。`;
                         }
                         const listItem = document.createElement('li');
                         listItem.textContent = str;
