--- a/calculator_en.html
+++ b/calculator_en.html
@@ -54,7 +54,7 @@
                 <input type="text" id="start" />
             </div>
             <div>
-                <label for="end">son(id or name):</label>
+                <label for="end">child (id or name):</label>
                 <input type="text" id="end" />
             </div>
             <button id="findPaths">breed!</button>
