--- a/calculator_zh.html
+++ b/calculator_zh.html
@@ -50,11 +50,11 @@
         <div id="calculator">
             <h2>帕鲁配种最短路径生成器</h2>
             <div>
-                <label for="start">父亲(id或中文名):</label>
+                <label for="start">父代(id或中文名):</label>
                 <input type="text" id="start" />
             </div>
             <div>
-                <label for="end">儿子(id或中文名):</label>
+                <label for="end">子代(id或中文名):</label>
                 <input type="text" id="end" />
             </div>
             <button id="findPaths">配种</button>
