--- a/calculator_zh.html
+++ b/calculator_zh.html
@@ -19764,6 +19764,7 @@
 
                     loadingOverlay.style.display = 'none';
                     button.disabled = false;
+                    window.scrollTo(0,0)
                 }, 50);
             }
 
